@@ -243,7 +243,6 @@ module ActionController #:nodoc:
   class Base
     DEFAULT_RENDER_STATUS_CODE = "200 OK"
 
-    include Reloadable::Deprecated
     include StatusCodes
 
     # Determines whether the view has access to controller internals @request, @response, @session, and @template.
