@@ -31,7 +31,6 @@ require 'active_support/inflector'
 require 'active_support/core_ext'
 require 'active_support/clean_logger'
 require 'active_support/dependencies'
-require 'active_support/reloadable'
 require 'active_support/deprecation'
 
 require 'active_support/ordered_options'
